25 July 2008: Wouter
	- added original copyright statement of OpenBSD arc4random code.

22 July 2008: Wouter
	- moved pipe actions to util/tube.c. easier porting and shared code.
	- check _raw() commpoint callbacks with fptr_wlist.
	- iana port update.

21 July 2008: Wouter
	- #198: nicer entropy warning message. manpage OS hints.

19 July 2008: Wouter
	- #198: fixup man page to suggest chroot entropy fix.

18 July 2008: Wouter
	- branch for 1.0 support.
	- trunk work on tube.c.

17 July 2008: Wouter
	- fix bug #196, compile outside source tree.
	- fix bug #195, add --with-username=user configure option.
	- print error and exit if started with config that requires more
	  fds than the builtin minievent can handle.

16 July 2008: Wouter
	- made svn tag 1.0.1, trunk now 1.0.2
	- sha256 checksums enabled in makedist.sh

15 July 2008: Wouter
	- Follow draft-ietf-dnsop-default-local-zones-06 added reverse
	  IPv6 example prefix to AS112 default blocklist.
	- fixup lookup of DS records by client with trustanchor for same.
	- libunbound ub_resolve, fix handling of error condition during setup.
	- lowered log_hex blocksize to fit through BSD syslog linesize.
	- no useless initialisation if getpwnam not available.
	- iana, ldns snapshot updated.

3 July 2008: Wouter
	- Matthijs fixed memory leaks in root hints file reading.

26 June 2008: Wouter
	- fixup streamtcp bounds setting for udp mode, in the test framework.
	- contrib item for updating trust anchors.

25 June 2008: Wouter
	- fixup fwd_ancil test typos.
	- Fix for newegg lameness : ok for qtype=A, but lame for others.
	- fixup unit test for infra cache, test lame merging.
	- porting to mingw, bind, listen, getsockopt and setsockopt error
	  handling.

24 June 2008: Wouter
	- removed testcode/checklocks from production code compilation path.
	- streamtcp can use UDP mode (connected UDP socket), for testing IPv6
	  on windows.
	- fwd_ancil test fails if platform support is lacking.

23 June 2008: Wouter